option java_outer_classname = "LCTerminalBroadcastSwitch";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

message TerminalBroadcastSwitch {
	required	bool	broadcastSwitch =1;
}