option java_outer_classname = "LCInAreaTriggerActivationOrLockNotify";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

import "core/proto/dataaccess/common/java/AreaInfo.proto";

message InAreaTriggerActivationOrLockNotify{
	required	int32			status		= 1;
	repeated	AreaInfo		areaInfo	= 2;
}